# summaryxtract

./: README.md  pyproject.toml
summaryxtract/: __init__.py  main.py  prompts.py
